# google-password-notifier

./: README.md  pyproject.toml
google_password_notifier/: notify.py
puppet/google_password_notifier/manifests/: init.pp
puppet/google_password_notifier/templates/: config.yaml.epp
